feat(config): 增加 JVM 配置文件支持和内存优化功能
- 添加配置文件支持，位置为 ~/.jdt-lsp-cli/config.json
- 增加配置命令：init、show、path、defaults，用于管理 JVM 配置
- 提供 JVM 参数默认值与说明，支持自定义内存和垃圾收集策略
- 支持低、中、高内存机器的配置推荐方案
- JdtLsClient 类新增 JVM 配置加载与 JVM 参数构建功能
- 更新启动参数，集成 JVM 内存和 GC 配置
- README 增补配置章节和使用示例
- package.json 版本升级至 1.2.0
- 导出配置相关的辅助函数和常量供外部使用